--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,12 @@
 		    <groupId>io.jsonwebtoken</groupId>
 		    <artifactId>jjwt</artifactId>
 		    <version>0.7.0</version>
-		</dependency>
-             
+		</dependency> 
+		<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>           
     </dependencies>
  
  
